# image-ml-classify

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
datasets/: classes.json  classes_2.json
models/: README.md
src/: app.py  main.py  train.py  utils.py  utils_bk.py
src/api/v1/: endpoints.py
src/controllers/: classification.py  training.py
src/core/: dataset_models.py  datasets.py  logger.py  responses.py  schemas.py  settings.py  transforms.py
src/services/: yandex_disk.py
src/utils/: file_utils.py
src/validators/: request_validators.py
tests/: conftest.py  test_app.py
tests/api/v1/: test_endpoints.py
tests/controllers/: test_classification.py  test_training.py
tests/core/: test_dataset_models.py  test_datasets.py
tests/services/: test_yandex_disk.py
tests/utils/: test_file_utils.py
