[project]
name = ""
version = ""
description = ""
authors = [
    {name = "alexmudrak", email = "95851199+alexmudrak@users.noreply.github.com"},
]
dependencies = [
    "numpy>=1.25.2",
    "torch>=2.1.0",
    "flask>=3.0.0",
    "flask-restful>=0.3.10",
    "Pillow>=10.1.0",
    "torchvision>=0.16.0",
    "packaging>=23.2",
    "matplotlib>=3.8.1",
    "yadisk>=1.3.4",
    "yadisk-async>=1.4.4",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm.scripts]
_.env_file = ".env"
init = "pre-commit install"
start = "python src/main.py"
