[project]
name = ""
version = ""
description = ""
authors = [
    {name = "alexmudrak", email = "95851199+alexmudrak@users.noreply.github.com"},
]
dependencies = [
    "gunicorn>=21.2.0",
    "flask>=3.0.0",
    "flask-restful>=0.3.10",
    "numpy>=1.25.2",
    "torch>=2.1.0",
    "Pillow>=10.1.0",
    "torchvision>=0.16.0",
    "yadisk-async>=1.4.4",
    "python-dotenv>=1.0.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm.scripts]
_.env_file = ".env"
init = "pre-commit install"
dev_server = "python src/app.py"
server = "gunicorn -w 4 -b 0.0.0.0:6767 src.app:app"

[tool.black]
line-length = 79

[tool.isort]
line_length = 79
profile = "black"

[tool.ruff]
line-length = 79
fixable = ["ALL"]
unfixable = []
