[project]
name = ""
version = ""
description = ""
authors = [
    {name = "alexmudrak", email = "95851199+alexmudrak@users.noreply.github.com"},
]
dependencies = [
    "gunicorn>=21.2.0",
    "flask>=3.0.0",
    "flask-restful>=0.3.10",
    "numpy>=1.25.2",
    "torch>=2.1.0",
    "Pillow>=10.1.0",
    "torchvision>=0.16.0",
    "yadisk-async>=1.4.4",
    "python-dotenv>=1.0.0",
    "aiohttp==3.9.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm.scripts]
_.env_file = ".env"
init = "pre-commit install"
dev_server = "python src/app.py"
server = "gunicorn -w 4 -b 0.0.0.0:6767 src.app:app"

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
]
[tool.black]
line-length = 79

[tool.isort]
line_length = 79
profile = "black"

[tool.ruff]
line-length = 79
fixable = ["ALL"]
unfixable = []

[tool.coverage.report]
exclude_lines= ["pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "raise Exception",
    "if __name__ == .__main__.:"]

omit = [
    "*/tests/*",
    "*/__init__.py",
    "*/migrations/*",
    ]

[tool.coverage.run]
source = ["src"]

omit = [
    "*/.virtualenvs/*",
    "*/virtualenvs/*",
    "*/tests/*",
    "*/.local/*",
    "*/__init__.py",
    "*/migrations/*",
    ]
